tests/paczka1/fuzzy1/53198422.err
Error in line 8: f
Error in line 13: 702jN S121 9,7
Error in line 19: 702jN S553 303,5
Error in line 28: 0EP2 S121 70,44
Error in line 27: 3Wecuv3Bw S121 16,6
Error in line 38: G5s7sd13w80 S382 2,8
